ajustes gerais no projeto